--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
+/* GLOBAL STYLE */
+body {
+  font-family: 'Lato', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.3;
+}
 .App {
   text-align: center;
 }
+/* COMMON STYLE */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* LINK BTN STYLE */
+.link-btn,
+.led-header .navbar-nav a {
+  text-decoration: none;
+  background-color: #D0C673;
+  color: #313131;
+  font-weight: 800;
+  text-transform: uppercase;
+  padding: 15px 30px;
+  display: inline-block;
+  border-radius: 5px;
+  position: relative;
+  z-index: 1;
+  transition: 0.4s all;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.link-btn:after,
+.led-header .navbar-nav a:after {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: -1;
+  transition: 0.4s all;
+  border-radius: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.link-btn:hover:after,
+.led-header .navbar-nav a:after {
+  width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.link-btn:hover,
+.led-header .navbar-nav a:hover {
+  color: #fff;
 }
