--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -20,3 +20,23 @@
     text-transform: uppercase;
     font-weight: 800;
 }
+
+.google-login span {
+    display: block;
+    margin-bottom: 15px;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.google-login button {
+    border: none;
+    font-size: 18px;
+    font-weight: 600;
+    padding: 10px 20px;
+    border-radius: 5px;
+}
+
+.google-login button svg {
+    margin-right: 10px;
+    margin-top: -5px;
+}
