--- a/src/Components/MyOrders/MyOrders.css
+++ b/src/Components/MyOrders/MyOrders.css
@@ -2,6 +2,7 @@
     text-transform: uppercase;
     background-color: #D0C673;
     padding: 30px 15px;
+    margin-bottom: 30px;
 }
 
 .page-title h2 {
@@ -51,4 +52,40 @@
 .orderd-product .col {
     margin-bottom: 30px;
     margin-top: 30px;
+}
+.update-btn button {
+    width: 100%;
+    display: block;
+    margin-left: 0;
+    background-color: #998f3e;
+    color: #fff;
+}
+.update-btn {
+    padding: 0;
+    display: block;
+}
+.update-btn a {
+    text-decoration: none;
+}
+.order-status-title {
+    margin-bottom: 30px;
+}
+
+.status-wrapper {
+    margin-bottom: 60px;
+}
+
+.order-status-title form input {
+    border: 1px solid #313113;
+}
+
+.status-wrapper input {
+    border: 1px solid #313131;
+    padding: 7px 10px;
+    border-radius: 5px;
+}
+
+.status-wrapper input[type="submit"] {
+    background: #D0C673;
+    font-weight: 600;
 }
