review and review rating

--- a/src/Components/MyOrders/MyOrders.css
+++ b/src/Components/MyOrders/MyOrders.css
@@ -8,6 +8,9 @@
 .page-title h2 {
     font-weight: 700;
 }
+.page-title .link-btn {
+    border: 1px solid #918A50;
+}
 
 .ordered-product {
     position: relative;
