--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -1,4 +1,26 @@
 .dashboard-head h2 {
-    padding: 30px 0px;
+    padding: 20px 0px;
     font-weight: 600;
+    margin: 0;
+}
+
+.dashboard-nav.navbar {
+    display: block;
+}
+
+.dashboard-nav.navbar .container {
+    flex-direction: column;
+}
+
+.dashboard-nav.navbar .container .row {
+    margin-bottom: 45px;
+}
+.dashboard-nav .navbar-nav {
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.dashboard-nav img {
+    margin-bottom: 20px;
 }
