--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -24,3 +24,13 @@
 .dashboard-nav img {
     margin-bottom: 20px;
 }
+.dashboard-content {
+    margin: 60px 0;
+}
+.dashboard-content {
+    margin-bottom: 60px;
+}
+
+.payment-detail {
+    margin: 60px 0;
+}
