--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -34,3 +34,10 @@
 .payment-detail {
     margin: 60px 0;
 }
+.reviews-wrapper {
+    margin-top: 60px;
+    margin-bottom: 30px;
+}
+.manage-products .card {
+    margin-bottom: 30px;
+}
