--- a/src/Components/Shared/Footer/Footer.css
+++ b/src/Components/Shared/Footer/Footer.css
@@ -31,3 +31,13 @@
 .copyright {
     text-align: left;
 }
+@media screen and (max-width: 800px) {
+    .footer .col {
+        width: 100%;
+        flex: inherit;
+        text-align: center;
+    }
+    .copyright p {
+        margin-bottom: 15px;
+    }
+}
