--- a/src/Components/Home/GetInTouch/GetInTouch.css
+++ b/src/Components/Home/GetInTouch/GetInTouch.css
@@ -15,3 +15,8 @@
 .contact-icon {
     text-align: center;
 }
+@media screen and (max-width: 800px) {
+    .contact-icon.col-md-4 {
+        display: none;
+    }
+}
