--- a/src/Components/Home/Products/Products.css
+++ b/src/Components/Home/Products/Products.css
@@ -49,3 +49,22 @@
     font-weight: 600;
     margin: 0;
 }
+.product-detail-wrapper .card {
+    padding: 15px;
+    margin: 60px 0;
+}
+
+.product-detail-wrapper .card h2 {
+    text-transform: uppercase;
+    font-weight: 600;
+    margin-bottom: 30px;
+    font-size: 28px;
+}
+
+.product-detail-wrapper .card img,.product-detail-wrapper .card h3 {
+    margin-bottom: 30px;
+}
+
+.product-detail-wrapper .card p:last-child {
+    font-size: 30px;
+}
